--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Trade smarter with confidence and clarity. Join Peaky Traders for premium Forex signals, market insights, and expert guidance." />
     <meta name="author" content="Peaky Traders" />
 
-    <meta property="og:title" content="Peaky Traders — Premium Forex Signals" />
+    <meta property="og:title" content="Peaky Traders" />
     <meta property="og:description" content="Trade smarter with confidence and clarity. Join our community today." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
@@ -15,10 +15,13 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@PeakyTraders" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800;900&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+
+    <!-- Favicon -->
+    <link rel="icon" href="/favicon.png" type="image/png" />
   </head>
 
   <body>
